# bgfx-rs

./: .gitattributes  .gitmodules  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  appveyor.yml  build.rs  rustfmt.toml  search-index.js
bgfx/: constant.BUFFER_ALLOW_RESIZE.html  constant.BUFFER_COMPUTE_FORMAT_16X1.html  constant.BUFFER_COMPUTE_FORMAT_16X2.html  constant.BUFFER_COMPUTE_FORMAT_16X4.html  constant.BUFFER_COMPUTE_FORMAT_32X1.html  constant.BUFFER_COMPUTE_FORMAT_32X2.html  constant.BUFFER_COMPUTE_FORMAT_32X4.html  constant.BUFFER_COMPUTE_FORMAT_8X1.html  constant.BUFFER_COMPUTE_FORMAT_8X2.html  constant.BUFFER_COMPUTE_FORMAT_8X4.html  constant.BUFFER_COMPUTE_FORMAT_MASK.html  constant.BUFFER_COMPUTE_FORMAT_SHIFT.html  constant.BUFFER_COMPUTE_READ.html  constant.BUFFER_COMPUTE_READ_WRITE.html  constant.BUFFER_COMPUTE_TYPE_FLOAT.html  constant.BUFFER_COMPUTE_TYPE_INT.html  constant.BUFFER_COMPUTE_TYPE_MASK.html  constant.BUFFER_COMPUTE_TYPE_SHIFT.html  constant.BUFFER_COMPUTE_TYPE_UINT.html  constant.BUFFER_COMPUTE_WRITE.html  constant.BUFFER_DRAW_INDIRECT.html  constant.BUFFER_INDEX32.html  constant.BUFFER_NONE.html  constant.CLEAR_COLOR.html  constant.CLEAR_DEPTH.html  constant.CLEAR_DISCARD_COLOR_0.html  constant.CLEAR_DISCARD_COLOR_1.html  constant.CLEAR_DISCARD_COLOR_2.html  (+141 more)
bgfx-sys/: Cargo.toml  Makefile  build.rs
examples/: 00-helloworld.rs  01-cubes.rs  Cargo.toml
examples/00-helloworld/: Cargo.toml  logo.rs  main.rs
examples/01-cubes/: Cargo.toml  main.rs
examples/common/: Cargo.toml  lib.rs  mod.rs
examples/src/: lib.rs
src/: api.rs  (+4 more)
(+798 files in other folders)
