[package]
name = "bgfx"
version = "0.1.0"
authors = ["Johan Sköld <johan@skold.cc>"]

[dependencies]
bitflags = "0.3.2"
libc = "0.2.4"

[dependencies.bgfx-sys]
path = "bgfx-sys/"

[dev-dependencies]
cgmath = "0.7.0"
glutin = { git = "https://github.com/rhoot/glutin.git", rev = "c71b14a" }
time = "0.1.33"
